syntax = "proto3";
package nicholasdotsol.duality.dex;

option go_package = "github.com/NicholasDotSol/duality/x/dex/types";

message FeeList {
  uint64 id = 1;
  string fee = 2; 
  
}
